--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.amigoscode</groupId>
     <artifactId>amigosservices</artifactId>
-    <version>1.0</version>
+    <version>2.0</version>
     <packaging>pom</packaging>
 
     <name>amigosservices</name>
@@ -14,6 +14,7 @@
 
     <modules>
         <module>customer</module>
+        <module>fraud</module>
     </modules>
 
     <properties>
