--- a/customer/pom.xml
+++ b/customer/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.amigoscode</groupId>
         <artifactId>amigosservices</artifactId>
-        <version>2.0</version>
+        <version>3.0.0</version>
     </parent>
 
     <artifactId>customer</artifactId>
@@ -21,18 +21,19 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>3.0.4</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
-            <version>3.0.4</version>
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
-            <version>42.5.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
     </dependencies>
 
