--- a/clients/pom.xml
+++ b/clients/pom.xml
@@ -9,19 +9,12 @@
         <version>4.0.0</version>
     </parent>
 
-    <artifactId>eureka-server</artifactId>
+    <artifactId>clients</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
-        </dependency>
-    </dependencies>
 
 </project>
