--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.amigoscode</groupId>
     <artifactId>amigosservices</artifactId>
-    <version>4.0.0</version>
+    <version>5.0.0</version>
     <packaging>pom</packaging>
 
     <name>amigosservices</name>
@@ -17,6 +17,7 @@
         <module>fraud</module>
         <module>eureka-server</module>
         <module>clients</module>
+        <module>notification</module>
     </modules>
 
     <properties>
