--- a/customer/pom.xml
+++ b/customer/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.amigoscode</groupId>
         <artifactId>amigosservices</artifactId>
-        <version>5.0.0</version>
+        <version>6.0.0</version>
     </parent>
 
     <artifactId>customer</artifactId>
@@ -36,9 +36,17 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-sleuth-zipkin</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.amigoscode</groupId>
             <artifactId>clients</artifactId>
-            <version>5.0.0</version>
+            <version>6.0.0</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
