--- a/notification/pom.xml
+++ b/notification/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.amigoscode</groupId>
         <artifactId>amigosservices</artifactId>
-        <version>7.0.0</version>
+        <version>8.0.0</version>
     </parent>
 
     <artifactId>notification</artifactId>
@@ -44,9 +44,18 @@
             <artifactId>spring-cloud-sleuth-zipkin</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.amigoscode</groupId>
+            <artifactId>amqp</artifactId>
+            <version>8.0.0</version>
+        </dependency>
+        <dependency>
             <groupId>com.amigoscode</groupId>
             <artifactId>clients</artifactId>
-            <version>7.0.0</version>
+            <version>8.0.0</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
