--- a/fraud/pom.xml
+++ b/fraud/pom.xml
@@ -6,17 +6,26 @@
     <parent>
         <groupId>com.amigoscode</groupId>
         <artifactId>amigosservices</artifactId>
-        <version>8.0.0</version>
+        <version>9.0.0</version>
     </parent>
-
+    <packaging>jar</packaging>
     <groupId>com.amigoscode.fraud</groupId>
     <artifactId>fraud</artifactId>
 
-    <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+
+    <!--    <properties>-->
+    <!--        <maven.compiler.source>17</maven.compiler.source>-->
+    <!--        <maven.compiler.target>17</maven.compiler.target>-->
+    <!--        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
+    <!--    </properties>-->
 
     <dependencies>
         <dependency>
@@ -47,7 +56,7 @@
         <dependency>
             <groupId>com.amigoscode</groupId>
             <artifactId>clients</artifactId>
-            <version>8.0.0</version>
+            <version>9.0.0</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
