--- a/amqp/pom.xml
+++ b/amqp/pom.xml
@@ -6,16 +6,17 @@
     <parent>
         <groupId>com.amigoscode</groupId>
         <artifactId>amigosservices</artifactId>
-        <version>8.0.0</version>
+        <version>9.0.0</version>
     </parent>
 
+    <packaging>jar</packaging>
     <artifactId>amqp</artifactId>
 
-    <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+    <!--    <properties>-->
+    <!--        <maven.compiler.source>17</maven.compiler.source>-->
+    <!--        <maven.compiler.target>17</maven.compiler.target>-->
+    <!--        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
+    <!--    </properties>-->
 
     <dependencies>
         <dependency>
