--- a/fraud/pom.xml
+++ b/fraud/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.amigoscode</groupId>
         <artifactId>amigosservices</artifactId>
-        <version>9.0.0</version>
+        <version>10.0.0</version>
     </parent>
     <packaging>jar</packaging>
     <groupId>com.amigoscode.fraud</groupId>
@@ -20,6 +20,20 @@
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>build-docker-image</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.google.cloud.tools</groupId>
+                        <artifactId>jib-maven-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
     <!--    <properties>-->
     <!--        <maven.compiler.source>17</maven.compiler.source>-->
@@ -56,7 +70,7 @@
         <dependency>
             <groupId>com.amigoscode</groupId>
             <artifactId>clients</artifactId>
-            <version>9.0.0</version>
+            <version>10.0.0</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
